--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "next": "15.5.5",
+    "nodemailer": "^7.0.10",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -26,7 +28,9 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.15",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.19.21",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
