--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.15",
     "zod": "^4.1.12"
   },
