--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.548.0",
     "next": "15.5.5",
     "nodemailer": "^7.0.10",
